[package]
name = "fabric_ledger_protos_rust"
version = "0.1.0"
authors = ["Matthew B White <whitemat@uk.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protobuf handling
prost = "0.6.1"
prost-types = "0.6.1"

[build-dependencies]
prost-build = { version = "0.6.1" }