[package]
name = "fabric_ledger_protos"
description = """
Rust library for encoding and decoding Hyperledger Fabric contract messages (generated)
"""
version = "0.2.0"
readme = "README.md"
authors = ["Hyperledger Fabric Developers"]
license = "Apache-2.0"
keywords = ["serialization", "protobuf"]
categories = ["encoding"]
repository = "https://github.com/hyperledgendary/fabric-ledger-protos"
edition = "2018"

[dependencies]
protobuf = "2.14.0"
